feat(JDK24): JEP485 Stream Gatherers - Temporarily enable preview features on JDK 23